--- a/myProjects.html
+++ b/myProjects.html
@@ -11,7 +11,7 @@
       <h1>My Projects</h1>
       <div class="project">
         <h2>Project 1: TODAY I LEARNED</h2>
-        <button><a href="https://todayilearned-shivam.netlify.app/" target="_blank">Live</a></button><br>
+        <a href="https://todayilearned-shivam.netlify.app/" target="_blank"><button>Live</button></a><br>
           Introducing 'Today I Learned,' an engaging
           <strong>full stack</strong> project where all of us can share daily
           facts and newfound knowledge. Explore a treasure trove of insights and
@@ -20,8 +20,8 @@
       </div>
       <div class="project">
         <h2>Project 2: Netflix Landing page</h2>
-        <button><a href=sp-netflix-clone.netlify.app
-            target="_blank">Live</a></button><br>
+        <a href=https://sp-netflix-clone.netlify.app
+            target="_blank"><button>Live</button></a><br>
         <p>
             A simple website having similar homepage
             that of Netflix using using HTML and
@@ -30,8 +30,8 @@
       </div>
       <div class="project">
         <h2>Project 3: Temperature Converter</h2>
-        <button><a href=sp-temp-converter.netlify.app
-            target="_blank">Live</a></button><br>
+       <a href=https://sp-temp-converter.netlify.app
+            target="_blank"><button>Live</button></a><br>
         <p>
             A simple website using CSS, HTML,
             JAVASCRIPT to convert temperature form
@@ -40,16 +40,16 @@
       </div>
       <div class="project">
         <h2>Project 4: Dice Challenge</h2>
-        <button><a href=sp-dice-challenge.netlify.app
-            target="_blank">Live</a></button><br>
+       <a href=https://sp-dice-challenge.netlify.app
+            target="_blank"> <button>Live</button></a><br>
         <p>
             A Dice Game Project using HTML, CSS, and JavaScript. The Dice Game is based on a two-player. Both players roll the dice and the player who gets the highest phase value will win the game.
         </p>
       </div>
       <div class="project">
         <h2>Project 5: TinDog</h2>
-        <button><a href=https://tindog-spro.netlify.app/
-            target="_blank">Live</a></button><br>
+      <a href=https://tindog-spro.netlify.app/
+            target="_blank"><button>Live</button></a><br>
         <p>
             A Tinder like for our furry friends using HTML, CSS, and Bootstrap.
         </p>
